# advent

./: .gitignore  README.md  makeday.sh
01/: rocket_fuel.py  (+1 more)
python/: pyproject.toml
python/advent/: advent_01.py
python/advent/day_01/: advent_01.py  calories.py  depth.py  elevator.py  rocket_fuel.py
python/advent/day_02/: intcomp.py  password_policy.py  program.py  rockpaperscissors.py  submarine.py
python/advent/day_03/: diagnostics.py  rucksack.py  toboggan.py
python/advent/day_04/: bingo.py  cleaning.py  passports.py
python/advent/day_05/: boarding.py  crates.py  hydrothermal.py
python/advent/day_06/: communication.py  customs.py  lanternfish.py
python/advent/day_07/: baggage.py  file_cleanup.py  whale.py
python/advent/day_08/: bootcomp.py  segmented.py  tree_house.py
python/advent/day_09/: bridge.py  tubes.py  xmas.py
python/advent/day_10/: adapters.py  braces.py  vcrt.py
python/advent/day_11/: monkey.py  octopi.py  seating.py
python/advent/day_12/: climbing.py  passage.py  rain.py
python/advent/day_13/: buses.py  distress.py  origami.py
python/advent/day_14/: bitcomp.py  polymers.py  sandfall.py
python/advent/day_15/: chitons.py  memory_game.py
python/advent/day_16/: bitputer.py  tickets.py
python/advent/day_17/: game_of_cubes.py  trickshot.py
python/advent/day_18/: calculator.py  snailfish.py
python/advent/day_19/: monster.py
python/advent/day_20/: enhance.py  jigsaw.py
python/advent/day_21/: allergens.py  dirac.py
python/advent/day_22/: crab_combat.py
python/advent/day_23/: crab_cups.py
python/tests/: util.py
(+161 files in other folders)
